# TurboTalkText

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  build.sh  make.sh  settings.json  setup.sh
src/: audio_manager.cpp  audio_manager.h  gui.cpp  hotkey.cpp  hotkey.h  keyboard.cpp  keyboard.h  logger.cpp  logger.h  main.cpp  main_nogui.cpp  mouse.cpp  mouse.h  overlay_ui.cpp  overlay_ui.h  settings.cpp  settings.h  settings.json  transcription.cpp  transcription.h
